# CPP_LABS

LAB0/LAB0A/: CMakeLists.txt  SOLUTION.md  TODO.txt
LAB0/LAB0A/src/: main.cpp  module1.cpp  module1.h  module2.cpp  module2.h  module3.cpp  module3.h
LAB0/LAB0B/: CMakeLists.txt  TODO.txt
LAB0/LAB0B/src/: file_utils.cpp  file_utils.h  main.cpp  my_exception.cpp  my_exception.h  utils.cpp  utils.h  word_counter.cpp  word_counter.h
LAB1/: CMakeLists.txt  TODO.txt
LAB1/src/: BitArray.cpp  BitArray.h  main.cpp
LAB1/src/enum/: operation.h
LAB1/src/exception/: AssignmentToOwnerException.h  BadBitPositionException.h  BadCellIndexException.h  DifferentSizeException.h  MyException.h
LAB1/test/: test.cpp
LAB2/: CMakeLists.txt  TODO.txt
LAB2/resources/: matrix-default.txt
LAB2/resources/config/: bonafide.txt
LAB2/src/: main.cpp
LAB2/src/game/: AGame.h  GameFactory.cpp  GameFactory.h
LAB2/src/game/impl/: DetailedGame.cpp  DetailedGame.h  FastGame.cpp  FastGame.h  TournamentGame.cpp  TournamentGame.h
LAB2/src/game/renderer/: GameRenderer.cpp  GameRenderer.h
LAB2/src/matrix/: GameMatrix.cpp  GameMatrix.h
LAB2/src/prisoner/: Prisoner.cpp  Prisoner.h
LAB2/src/renderer/: GameRenderer.cpp  GameRenderer.h
LAB2/src/strategy/: AStrategy.h  StrategyFactory.cpp  StrategyFactory.h
LAB2/src/strategy/impl/: AltruistStrategy.cpp  AltruistStrategy.h  BetrayerStrategy.cpp  BetrayerStrategy.h  BonafideStrategy.cpp  BonafideStrategy.h  CombinedStrategy.cpp  CombinedStrategy.h  MimickerStrategy.cpp  MimickerStrategy.h  RandomStrategy.cpp  RandomStrategy.h
LAB2/src/utils/: GameArgs.cpp  GameArgs.h  combinations_utils.cpp  combinations_utils.h  regex_utils.cpp  regex_utils.h
LAB2/src/utils/enum/: Choice.cpp  Choice.h  GameMode.cpp  GameMode.h
LAB2/src/utils/file_utils/: file_basic.cpp  file_basic.h
LAB2/src/utils/my_types/: MyTypes.h
LAB2/test/gametest/: GameTest.cpp
LAB2/test/matrixtest/: MatrixTest.cpp
LAB2/test/strategytest/: StrategyTest.cpp
LAB3/: CMakeLists.txt  TODO.txt
LAB3/resources/: config.txt
LAB3/src/: main.cpp
LAB3/src/configreader/: ConfigReader.cpp  ConfigReader.h
LAB3/src/exception/: BadInputException.h  IOException.h  MyException.h
LAB3/src/soundprocessor/: SoundProcessor.cpp  SoundProcessor.h
LAB3/src/soundprocessor/task/: Task.h  TaskType.h
LAB3/src/soundprocessor/task/impl/: CompressTask.cpp  CompressTask.h  MixTask.cpp  MixTask.h  MuteTask.cpp  MuteTask.h
LAB3/src/soundprocessor/task/taskfactory/: TaskFactory.h
LAB3/src/soundprocessor/wav/: WavUtils.h
LAB3/src/types/: Mode.h
LAB3/src/utils/: Helper.h  ParsedArgs.cpp  ParsedArgs.h  StringUtils.cpp  StringUtils.h
LAB4/: CMakeLists.txt
LAB4/resources/: test.csv
LAB4/src/: main.cpp
